kubernetes/pre/03-impala-api-service-nodeport-preprod.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "impala-api-preprod-service"
  namespace: "default"
spec:
  ports:
  - protocol: "TCP"
    port: 10010
    targetPort: 10010
  selector:
    app: "impala-api-preprod"
  type: "ClusterIP"
