kubernetes/pre/traefik-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-beta-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  tls:
    - secretName: traefik-cert
  rules:
  - host:
    http:
      paths:
      - path: /sgpc
        backend:
          serviceName: sgpc-60000
          servicePort: sgpc-http
